Added script file

--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
     <head>
         <title>Hello World!</title>
         <link rel="stylesheet" href="styles.css">
+        <script src="scripts.js"></script>
     </head>
 
     <body>
         <h1>Simple page example</h1>
+        <button
+            type="button"
+            onclick="onButtonClick()"
+        >Click on me!</buttontype=>
     </body>
 </html>
